# simple-kratix-promise-validator

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  validate.py
.github/workflows/: pychecks.yaml  pylint.yml  pytest.yml
tests/: test_validate.py
